# CacheAlgorithms

./: .clang-format  CMakeLists.txt  README.md
conf/: data.txt
src/: CacheBase.h  CacheFIFO.cpp  CacheFIFO.h  CacheLFU.cpp  CacheLFU.h  CacheLRU.cpp  CacheLRU.h  CacheMD5.cpp  CacheMD5.h  CacheMgr.cpp  CacheMgr.h  CacheQ2.cpp  CacheQ2.h
test/: Example.cpp  Generator.cpp
